--- a/ML/recom.ipynb
+++ b/ML/recom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4  78  42  42    20.130175  81.604873  7.628473  262.717340  rice"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "(2200, 8)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "0"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "max       9.935091   298.560117  "
       ]
      },
-     "execution_count": 249,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "rainfall     1.000000  "
       ]
      },
-     "execution_count": 250,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "4  78  42  42    20.130175  81.604873  7.628473  262.717340  rice"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -926,12 +926,12 @@
       "Naive Bayes  with accuracy : 0.9931818181818182\n",
       "Support Vector Machine  with accuracy : 0.9772727272727273\n",
       "K-Nearest Neighbors  with accuracy : 0.9772727272727273\n",
-      "Decision Tree  with accuracy : 0.9954545454545455\n",
+      "Decision Tree  with accuracy : 0.990909090909091\n",
       "Random Forest  with accuracy : 0.9977272727272727\n",
       "Bagging  with accuracy : 0.9954545454545455\n",
       "AdaBoost  with accuracy : 0.17272727272727273\n",
       "Gradient Boosting  with accuracy : 0.9954545454545455\n",
-      "Extra Trees  with accuracy : 0.9113636363636364\n"
+      "Extra Trees  with accuracy : 0.9045454545454545\n"
      ]
     }
    ],
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
        "0.9977272727272727"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1072,7 @@
     "    top3_crops = [crop_dict[idx + 1] for idx in top3_classes]\n",
     "    top3_crops.reverse()\n",
     "    print(\"Best crop to be cultivated: \", crop_dict[prediction1[0]])\n",
-    "    print(\"Top 4 best crops to be cultivated after the 1st one:\", top3_crops)\n",
+    "    print(\"Top 5 best crops to be cultivated after the 1st one:\", top3_crops)\n",
     "\n",
     "    # if prediction[0] in crop_dict:\n",
     "    #     crop = crop_dict[prediction[0]]\n",
@@ -1086,34 +1086,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best crop to be cultivated:  Banana\n",
-      "Top 4 best crops to be cultivated after the 1st one: ['Banana', 'Coffee', 'Watermelon', 'Maize', 'Jute']\n"
+      "Best crop to be cultivated:  Coffee\n",
+      "Top 5 best crops to be cultivated after the 1st one: ['Coffee', 'Chickpea', 'Maize', 'Jute', 'Cotton']\n"
      ]
     }
    ],
    "source": [
-    "N = 94\t\t\t\t\t\t\n",
-    "P = 91\n",
-    "k = 51\n",
-    "temperature = 29.16093424\n",
-    "humidity = 76.67484233\n",
-    "ph = 5.618094446\n",
-    "rainfall = 109.575944\n",
-    "\n",
+    "N = 104\t\n",
+    "P = 35\n",
+    "k = 28\n",
+    "temperature = 27.51006055\n",
+    "humidity = 50.66687215\n",
+    "ph = 6.983732393\n",
+    "rainfall =143.9955548\n",
     "predict = recommendation(N,P,k,temperature,humidity,ph,rainfall)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
