--- a/ML/recom.ipynb
+++ b/ML/recom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "4  78  42  42    20.130175  81.604873  7.628473  262.717340  rice"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "(2200, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "max       9.935091   298.560117  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "rainfall     1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -640,176 +640,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encoding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "label\n",
-       "rice           100\n",
-       "maize          100\n",
-       "jute           100\n",
-       "cotton         100\n",
-       "coconut        100\n",
-       "papaya         100\n",
-       "orange         100\n",
-       "apple          100\n",
-       "muskmelon      100\n",
-       "watermelon     100\n",
-       "grapes         100\n",
-       "mango          100\n",
-       "banana         100\n",
-       "pomegranate    100\n",
-       "lentil         100\n",
-       "blackgram      100\n",
-       "mungbean       100\n",
-       "mothbeans      100\n",
-       "pigeonpeas     100\n",
-       "kidneybeans    100\n",
-       "chickpea       100\n",
-       "coffee         100\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crop['label'].value_counts()"
+    "Encoding and Train Test Split"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>N</th>\n",
-       "      <th>P</th>\n",
-       "      <th>K</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>humidity</th>\n",
-       "      <th>ph</th>\n",
-       "      <th>rainfall</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>90</td>\n",
-       "      <td>42</td>\n",
-       "      <td>43</td>\n",
-       "      <td>20.879744</td>\n",
-       "      <td>82.002744</td>\n",
-       "      <td>6.502985</td>\n",
-       "      <td>202.935536</td>\n",
-       "      <td>rice</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>85</td>\n",
-       "      <td>58</td>\n",
-       "      <td>41</td>\n",
-       "      <td>21.770462</td>\n",
-       "      <td>80.319644</td>\n",
-       "      <td>7.038096</td>\n",
-       "      <td>226.655537</td>\n",
-       "      <td>rice</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>60</td>\n",
-       "      <td>55</td>\n",
-       "      <td>44</td>\n",
-       "      <td>23.004459</td>\n",
-       "      <td>82.320763</td>\n",
-       "      <td>7.840207</td>\n",
-       "      <td>263.964248</td>\n",
-       "      <td>rice</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>74</td>\n",
-       "      <td>35</td>\n",
-       "      <td>40</td>\n",
-       "      <td>26.491096</td>\n",
-       "      <td>80.158363</td>\n",
-       "      <td>6.980401</td>\n",
-       "      <td>242.864034</td>\n",
-       "      <td>rice</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>78</td>\n",
-       "      <td>42</td>\n",
-       "      <td>42</td>\n",
-       "      <td>20.130175</td>\n",
-       "      <td>81.604873</td>\n",
-       "      <td>7.628473</td>\n",
-       "      <td>262.717340</td>\n",
-       "      <td>rice</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    N   P   K  temperature   humidity        ph    rainfall label\n",
-       "0  90  42  43    20.879744  82.002744  6.502985  202.935536  rice\n",
-       "1  85  58  41    21.770462  80.319644  7.038096  226.655537  rice\n",
-       "2  60  55  44    23.004459  82.320763  7.840207  263.964248  rice\n",
-       "3  74  35  40    26.491096  80.158363  6.980401  242.864034  rice\n",
-       "4  78  42  42    20.130175  81.604873  7.628473  262.717340  rice"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "crop.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Train Test Split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -926,12 +762,12 @@
       "Naive Bayes  with accuracy : 0.9931818181818182\n",
       "Support Vector Machine  with accuracy : 0.9772727272727273\n",
       "K-Nearest Neighbors  with accuracy : 0.9772727272727273\n",
-      "Decision Tree  with accuracy : 0.990909090909091\n",
+      "Decision Tree  with accuracy : 0.9886363636363636\n",
       "Random Forest  with accuracy : 0.9977272727272727\n",
-      "Bagging  with accuracy : 0.9954545454545455\n",
+      "Bagging  with accuracy : 0.990909090909091\n",
       "AdaBoost  with accuracy : 0.17272727272727273\n",
       "Gradient Boosting  with accuracy : 0.9954545454545455\n",
-      "Extra Trees  with accuracy : 0.9045454545454545\n"
+      "Extra Trees  with accuracy : 0.9113636363636364\n"
      ]
     }
    ],
@@ -973,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +818,7 @@
        "0.9977272727272727"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +930,7 @@
      "output_type": "stream",
      "text": [
       "Best crop to be cultivated:  Coffee\n",
-      "Top 5 best crops to be cultivated after the 1st one: ['Coffee', 'Chickpea', 'Maize', 'Jute', 'Cotton']\n"
+      "Top 5 best crops to be cultivated after the 1st one: ['Coffee', 'Banana', 'Mango', 'Watermelon', 'Maize']\n"
      ]
     }
    ],
@@ -1112,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
